--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -9,7 +9,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
+    color: rgb(250, 240, 244);
 }
 
 
